Scou t made it stupid

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="webPage">
-        <h1>JavaScript Image Generator</h1>
+        <h1>kahoot</h1>
         <div id="innerWebPage">
             <canvas style="border: 3px black solid; height: 300px; width: 300px" id="imageDisplay"></canvas>
             <div id="optionsContainer">
