--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="webPage">
         <h1>Javascript Image Generator</h1>
         <div id="innerWebPage">
+            <img src="./img/pancake.png" alt="ONE COLORFUL BOUNCEY BOUNCE HONEY PANCAKE.">
             <canvas style="border: 3px black solid; height: 300px; width: 300px" id="imageDisplay"></canvas>
             <div id="optionsContainer">
                 <div class="subMenu">
