I made new id's :)

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     <h2>Categories</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
-                            <div class="normBtn">Hair</div>
-                            <div class="normBtn">Other Hair</div>
-                            <div class="normBtn">Even More Hair</div>
+                            <div class="normBtn" id="hairBtn">Hair</div>
+                            <div class="normBtn" id="otherHairBtn">Other Hair</div>
+                            <div class="normBtn" id="evenMoreHairBtn">Even More Hair</div>
                         </div>
                         <div class="btnContainer">
-                            <div class="normBtn">Foot</div>
-                            <div class="normBtn">Other Foot</div>
+                            <div class="normBtn" id="footBtn">Foot</div>
+                            <div class="normBtn" id="otherFootBtn">Other Foot</div>
                         </div>
                     </div>
                 </div>
@@ -37,11 +37,11 @@
                     <h2>Hair Options</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
-                            <div class="normBtn">Floof</div>
+                            <div class="normBtn" id="floofBtn">Floof</div>
                         </div>
                         <div class="btnContainer">
-                            <div class="normBtn">Floof-Floofer</div>
-                            <div class="normBtn">Floof-Flooferer</div>
+                            <div class="normBtn" id="floof-FlooferBtn">Floof-Floofer</div>
+                            <div class="normBtn" id="floof-FloofererBtn">Floof-Flooferer</div>
                         </div>
                     </div>
                 </div>
