--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     <h2>Hair Options</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
-                            <div class="normBtn" id="floofBtn">Floof</div>
+                            <div class="normBtn" id="floofBtn" onclick="changeColor(floofBtn)">Floof</div>
                         </div>
                         <div class="btnContainer">
-                            <div class="normBtn" id="floof-FlooferBtn">Floof-Floofer</div>
-                            <div class="normBtn" id="floof-FloofererBtn">Floof-Flooferer</div>
+                            <div class="normBtn" id="floof-FlooferBtn" onclick="changeColor(floofFlooferBtn)">Floof-Floofer</div>
+                            <div class="normBtn" id="floof-FloofererBtn" onclick="setSelectedObj('floof-FloofererBtn')">Floof-Flooferer</div>
                         </div>
                     </div>
                 </div>
