Make pancakes tiny or big (other foot btn)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="btnContainer">
                             <div class="normBtn" id="footBtn" onclick="toggleVisibility(yummyPancakes)">Foot</div>
-                            <div class="normBtn" id="otherFootBtn">Other Foot</div>
+                            <div class="normBtn" id="otherFootBtn" onclick="toggleSize(yummyPancakes)">Other Foot</div>
                         </div>
                     </div>
                 </div>
