removed extra parameters

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="vertContainer">
                         <div class="btnContainer">
                             <div class="normBtn" id="hairBtn" onclick="hideObject(selectedObj)">Hair</div>
-                            <div class="normBtn" id="otherHairBtn" onclick="strawberryPancakes(strawberries)">Other Hair</div>
+                            <div class="normBtn" id="otherHairBtn" onclick="strawberryPancakes()">Other Hair</div>
                             <div class="normBtn" id="evenMoreHairBtn" onclick="toggleVisibility(selectedObj)">Even More Hair</div>
                         </div>
                         <div class="btnContainer">
@@ -39,7 +39,7 @@
                     <h2>Hair Options</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
-                            <div class="normBtn" id="floofBtn" onclick= "noStrawberries(yummyPancakes)">Floof</div>
+                            <div class="normBtn" id="floofBtn" onclick= "noStrawberries()">Floof</div>
                         </div>
                         <div class="btnContainer">
                             <div class="normBtn" id="floof-FlooferBtn" onclick="changeColor(floofFlooferBtn)">Floof-Floofer</div>
