--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img id= "strawberries" src ="./img/Project 1.jpg" style="height:300px">           
             <canvas style= "border: 3px black solid; height: 300px; width: 300px" id="imageDisplay"></canvas>
             <div id="optionsContainer">
-                <div class="subMenu">
+                <div class="subMenu" id="categoryContainer">
                     <h2>Categories</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="subMenu" style="margin: 10px 0px 0px 0px">
+                <div class="subMenu" id="hairOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Hair Options</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
