--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="subMenu" id="glovesOptionsContainer" style="margin: 10px 0px 0px 0px">
+                    <h2>Gloves Options</h2>
+                    <div class="vertContainer">
+                        <div class="btnContainer">
+                            <div class="normBtn" id="mittensBtn" onclick="">Mittens</div>
+                        </div>
+                        <div class="btnContainer">
+                            <div class="normBtn" id="fancyGlovesBtn" onclick="">Fancy Gloves</div>
+                            <div class="normBtn" id="hookHandsBtn" onclick="">Hook Hands</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
