fixed missing divs

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                         <div class="btnContainer">
                             <div class="normBtn" id="fancyGlovesBtn" onclick="">Fancy Gloves</div>
                             <div class="normBtn" id="hookHandsBtn" onclick="">Hook Hands</div>
+                        </div>
+                    </div>
+                </div>
                 <div class="subMenu" id="coatOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Coat Options</h2>
                     <div class="vertContainer">
