Necklace Container Again

--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="subMenu" id="necklaceOptionsContainer" style="margin: 10px 0px 0px 0px">
+                    <h2>Necklace Options</h2>
+                    <div class="vertContainer">
+                        <div class="btnContainer">
+                            <div class="normBtn" id="goldNecklaceBtn">Gold Necklace</div>
+                        </div>
+                        <div class="btnContainer">
+                            <div class="normBtn" id="blueNecklaceBtn">Blue Necklace</div>
+                            <div class="normBtn" id="sapphireNecklaceBtn">Sapphire Necklace</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
