--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="tabs.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
