--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <h2>Hair Options</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
-                            <div class="normBtn" id="floofBtn" onclick= "noStrawberries()">Floof</div>
+                            <div class="normBtn" id="sweetHairBtn" onclick= "">Sweet Hair</div>
                         </div>
                         <div class="btnContainer">
-                            <div class="normBtn" id="floof-FlooferBtn" onclick="changeColor(floofFlooferBtn)">Floof-Floofer</div>
-                            <div class="normBtn" id="floof-FloofererBtn" onclick="setSelectedObj('floof-FloofererBtn')">Floof-Flooferer</div>
+                            <div class="normBtn" id="powerfulHairBtn" onclick="">Powerful Hair</div>
+                            <div class="normBtn" id="sillyHairBtn" onclick="">Silly Hair</div>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="tabs.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="javascripts/tabs.js"></script>
+    <script type="text/javascript" src="javascripts/main.js"></script>
 </body>
 </html>
