--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h2>Categories</h2>
                     <div class="vertContainer">
                         <div class="btnContainer">
-                            <div class="normBtn" id="hairBtn" onclick="hideObject(selectedObj)">Hair</div>
+                            <div class="normBtn" id="hairBtn" onclick="changeContainer('hair')">Hair</div>
                             <div class="normBtn" id="otherHairBtn" onclick="strawberryPancakes()">Other Hair</div>
                             <div class="normBtn" id="evenMoreHairBtn" onclick="toggleVisibility(selectedObj)">Even More Hair</div>
                         </div>
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="tabs.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="javascripts/tabs.js"></script>
+    <script type="text/javascript" src="javascripts/main.js"></script>
 </body>
 </html>
