--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
                     <div class="vertContainer">
                         <div class="btnContainer">
                             <div class="normBtn" id="hairBtn" onclick="changeContainer('hair')">Hair</div>
-                            <div class="normBtn" id="otherHairBtn" onclick="strawberryPancakes()">Other Hair</div>
-                            <div class="normBtn" id="evenMoreHairBtn" onclick="toggleVisibility(selectedObj)">Even More Hair</div>
+                            <div class="normBtn" id="otherHairBtn" onclick="changeContainer('gloves')">Gloves</div>
                         </div>
                         <div class="btnContainer">
-                            <div class="normBtn" id="footBtn" onclick="toggleVisibility(yummyPancakes)">Foot</div>
-                            <div class="normBtn" id="otherFootBtn" onclick="toggleSize(yummyPancakes)">Other Foot</div>
+                            <div class="normBtn" id="footBtn" onclick="changeContainer('coat')">Coat</div>
+                            <div class="normBtn" id="otherFootBtn" onclick="changeContainer('necklace')">Necklace</div>
                         </div>
                     </div>
                 </div>
