--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="normBtn" id="itchyCoatBtn" onclick= >Itchy Coat</div>
                         </div>
                         <div class="btnContainer">
-                            <div class="normBtn" id="softCoatBtn" onclick=>Raincoat</div>
+                            <div class="normBtn" id="raincoatCoatBtn" onclick=>Raincoat</div>
                             <div class="normBtn" id="prettyCoatBtn" onclick=>Pretty Coat</div>
                         </div>
                     </div>
