--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <div class="subMenu" id="categoryContainer">
                     <h2>Categories</h2>
                     <div class="vertContainer">
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="hairBtn" onclick="changeContainer('hair')">Hair</div>
                             <div class="normBtn" id="otherHairBtn" onclick="changeContainer('gloves')">Gloves</div>
                         </div>
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="footBtn" onclick="changeContainer('coat')">Coat</div>
                             <div class="normBtn" id="otherFootBtn" onclick="changeContainer('necklace')">Necklace</div>
                         </div>
@@ -34,10 +34,10 @@
                 <div class="subMenu" id="hairOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Hair Options</h2>
                     <div class="vertContainer">
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="sweetHairBtn" onclick= "">Sweet Hair</div>
                         </div>
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="powerfulHairBtn" onclick="">Powerful Hair</div>
                             <div class="normBtn" id="sillyHairBtn" onclick="">Silly Hair</div>
                         </div>
@@ -46,10 +46,10 @@
                 <div class="subMenu" id="glovesOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Gloves Options</h2>
                     <div class="vertContainer">
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="mittensBtn" onclick="">Mittens</div>
                         </div>
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="fancyGlovesBtn" onclick="">Fancy Gloves</div>
                             <div class="normBtn" id="hookHandsBtn" onclick="">Hook Hands</div>
                         </div>
@@ -58,10 +58,10 @@
                 <div class="subMenu" id="coatOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Coat Options</h2>
                     <div class="vertContainer">
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="itchyCoatBtn" onclick= >Itchy Coat</div>
                         </div>
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="raincoatCoatBtn" onclick=>Raincoat</div>
                             <div class="normBtn" id="prettyCoatBtn" onclick=>Pretty Coat</div>
                         </div>
@@ -70,10 +70,10 @@
                 <div class="subMenu" id="necklaceOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Necklace Options</h2>
                     <div class="vertContainer">
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="goldNecklaceBtn">Gold Necklace</div>
                         </div>
-                        <div class="btnContainer">
+                        <div class="rowContainer">
                             <div class="normBtn" id="blueNecklaceBtn">Blue Necklace</div>
                             <div class="normBtn" id="sapphireNecklaceBtn">Sapphire Necklace</div>
                         </div>
