Renamed row and column css classes 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="optionsContainer">
                 <div class="subMenu" id="categoryContainer">
                     <h2>Categories</h2>
-                    <div class="vertContainer">
+                    <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="hairBtn" onclick="changeContainer('hair')">Hair</div>
                             <div class="normBtn" id="otherHairBtn" onclick="changeContainer('gloves')">Gloves</div>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="subMenu" id="hairOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Hair Options</h2>
-                    <div class="vertContainer">
+                    <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="sweetHairBtn" onclick= "">Sweet Hair</div>
                         </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="subMenu" id="glovesOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Gloves Options</h2>
-                    <div class="vertContainer">
+                    <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="mittensBtn" onclick="">Mittens</div>
                         </div>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="subMenu" id="coatOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Coat Options</h2>
-                    <div class="vertContainer">
+                    <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="itchyCoatBtn" onclick= >Itchy Coat</div>
                         </div>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="subMenu" id="necklaceOptionsContainer" style="margin: 10px 0px 0px 0px">
                     <h2>Necklace Options</h2>
-                    <div class="vertContainer">
+                    <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="goldNecklaceBtn">Gold Necklace</div>
                         </div>
