More Canvas Math

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <img src="img/alpaca.png" style="display: none" id="alpacaImg">
+    <img src="img/coats/rainCoat.png" style="display: none" id="coatsRaincoatImg">
 
     <div id="webPage">
         <h1>Javascript Image Generator</h1>
