no coat or hair

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
                     <h2>Hair Options</h2>
                     <div class="columnContainer">
                         <div class="rowContainer">
+                            <div class="normBtn" id="sillyHairBtn" onclick= "">Silly Hair</div>
                             <div class="normBtn" id="sweetHairBtn" onclick= "">Sweet Hair</div>
                         </div>
                         <div class="rowContainer">
                             <div class="normBtn" id="powerfulHairBtn" onclick="">Powerful Hair</div>
-                            <div class="normBtn" id="sillyHairBtn" onclick="">Silly Hair</div>
+                            <div class="normBtn" id="noHairBtn" onclick="">No Hair</div>
                         </div>
                     </div>
                 </div>
@@ -63,10 +64,11 @@
                     <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="itchyCoatBtn" onclick= >Itchy Coat</div>
+                            <div class="normBtn" id="fancyCoatBtn" onclick= >Fancy Coat</div>
                         </div>
                         <div class="rowContainer">
                             <div class="normBtn" id="raincoatCoatBtn" onclick=>Raincoat</div>
-                            <div class="normBtn" id="fancyCoatBtn" onclick=>Fancy Coat</div>
+                            <div class="normBtn" id="noCoatBtn" onclick=>No Coat</div>
                         </div>
                     </div>
                 </div>
