--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                     <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="mittensBtn" onclick="">Mittens</div>
+                            <div class="normBtn" id="fancyGlovesBtn" onclick="">Fancy Gloves</div>
                         </div>
                         <div class="rowContainer">
-                            <div class="normBtn" id="fancyGlovesBtn" onclick="">Fancy Gloves</div>
                             <div class="normBtn" id="hookHandsBtn" onclick="">Hook Hands</div>
+                            <div class="normBtn" id="theGlovesAreOffBtn" onclick="">THE GLOVES ARE OFF</div>
                         </div>
                     </div>
                 </div>
@@ -75,10 +76,11 @@
                     <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="goldNecklaceBtn">Gold Necklace</div>
+                            <div class="normBtn" id="blueNecklaceBtn">Blue Necklace</div>
                         </div>
                         <div class="rowContainer">
-                            <div class="normBtn" id="blueNecklaceBtn">Blue Necklace</div>
                             <div class="normBtn" id="sapphireNecklaceBtn">Sapphire Necklace</div>
+                            <div class="normBtn" id="noNecklaceBtn" onclick="">No Necklace</div>
                         </div>
                     </div>
                 </div>
