Added Selection Highlights

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <div class="columnContainer">
                         <div class="rowContainer">
                             <div class="normBtn" id="hairBtn" onclick="changeContainer('hair')">Hair</div>
-                            <div class="normBtn" id="otherHairBtn" onclick="changeContainer('gloves')">Gloves</div>
+                            <div class="normBtn" id="glovesBtn" onclick="changeContainer('gloves')">Gloves</div>
                         </div>
                         <div class="rowContainer">
-                            <div class="normBtn" id="footBtn" onclick="changeContainer('coat')">Coat</div>
-                            <div class="normBtn" id="otherFootBtn" onclick="changeContainer('necklace')">Necklace</div>
+                            <div class="normBtn" id="coatBtn" onclick="changeContainer('coat')">Coat</div>
+                            <div class="normBtn" id="necklaceBtn" onclick="changeContainer('necklace')">Necklace</div>
                         </div>
                     </div>
                 </div>
