fixed small mistakes and made powerful hair an img

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <img src="img/coats/itchyCoat.png" style="display: none" id ="coatsItchyCoatImg">
     <img src="img/coats/fancyCoat.png" style="display: none" id ="coatsFancyCoatImg">
     <img src="img/gloves/fancyGloves.png" style="display: none;" id="glovesFancyGlovesImg">
-    <img src="img/gloves/hookhands.png" style="display: none;" id="glovesHookHandsimg"> 
-    <img src="img/gloves/mittens.png" style="display: none;" id="glovesMittensimg">
+    <img src="img/gloves/hookhands.png" style="display: none;" id="glovesHookHandsImg"> 
+    <img src="img/gloves/mittens.png" style="display: none;" id="glovesMittensImg">
+    <img src="img/hair/powerfulHair.png" style="display: none" id="hairPowerfulHairImg">
 
 
     <div id="webPage">
