fixed more mistakes :)

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     <h2>Gloves Options</h2>
                     <div class="columnContainer">
                         <div class="rowContainer">
-                            <div class="normBtn" id="mittensBtn" onclick="setGloves('glovesMittensimg')">Mittens</div>
+                            <div class="normBtn" id="mittensBtn" onclick="setGloves('glovesMittensImg')">Mittens</div>
                             <div class="normBtn" id="fancyGlovesBtn" onclick="setGloves('glovesFancyGlovesImg')" >Fancy Gloves</div>
                         </div>
                         <div class="rowContainer">
-                            <div class="normBtn" id="hookHandsBtn" onclick="setGloves('glovesHookHandsimg')">Hook Hands</div>
+                            <div class="normBtn" id="hookHandsBtn" onclick="setGloves('glovesHookHandsImg')">Hook Hands</div>
                             <div class="normBtn" id="theGlovesAreOffBtn" onclick="setGloves('none')">THE GLOVES ARE OFF</div>
                         </div>
                     </div>
