--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="img/gloves/fancyGloves.png" style="display: none;" id="glovesFancyGlovesImg">
     <img src="img/gloves/hookhands.png" style="display: none;" id="glovesHookHandsImg"> 
     <img src="img/gloves/mittens.png" style="display: none;" id="glovesMittensImg">
-    <img src="img/hair/powerfulHair.png" style="display: none" id="hairPowerfulHairImg">
+    <img src="img/hair/powerfulHair.png" style="display: none;" id="hairPowerfulHairImg">
 
 
     <div id="webPage">
@@ -49,7 +49,7 @@
                             <div class="normBtn" id="sweetHairBtn" onclick= "">Sweet Hair</div>
                         </div>
                         <div class="rowContainer">
-                            <div class="normBtn" id="powerfulHairBtn" onclick="">Powerful Hair</div>
+                            <div class="normBtn" id="powerfulHairBtn" onclick="setHair('hairPowerfulHairImg')">Powerful Hair</div>
                             <div class="normBtn" id="noHairBtn" onclick="">No Hair</div>
                         </div>
                     </div>
