Added the Ability to Switch Placement Mode Images

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <img src="img/hair/afroHair.png" style="display: none;" id="hairAfroHairImg">
 
 
-    <div id="webPage">
+    <div id="webPage" onmousedown="mouseDownPage()">
         <h1>Javascript Image Generator</h1>
         <div id="innerWebPage">
-            <canvas style= "border: 3px black solid; height: 300px; width: 300px" id="imageDisplay" onmousedown="mouseDown()" onmouseup="mouseUp()"></canvas>
+            <canvas style= "border: 3px black solid; height: 300px; width: 300px" id="imageDisplay" onmousedown="mouseDownCan()"></canvas>
             <div id="optionsContainer">
                 <div class="subMenu" id="categoryContainer">
                     <h2>Categories</h2>
